--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.10.2",
+    "prettier": "3.7.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "vitest": "^4.0.15"
